# etl-tools-task

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  run.sh  setup.cfg
db/: Dockerfile  create_table.sql
src/etl_tools/download/: impl_csv.py  impl_json.py  interface.py
src/etl_tools/orchestration/: etl.py
src/etl_tools/upload/: impl_db.py  interface.py
tests/: test_download_interface.py  test_impl_csv.py  test_impl_db.py  test_impl_json.py  test_interface.py  test_upload_interface.py
